Estilizando a lista de itens

--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
               <div class="item">
                 <input type="checkbox" id="checkbox" />
                 <label for="checkbox">Arroz</label>
+                <a><img src="assets/icons/lixeira.svg" alt="Remover"></a>
               </div>
             </li>
             <li>
               <div class="item">
                 <input type="checkbox" id="checkbox" />
                 <label for="checkbox">Feijão</label>
+                <a><img src="assets/icons/lixeira.svg" alt="Remover"></a>
               </div>
             </li>
           </ul>
